Ticket #703 (new task)

Opened 2 years ago

Last modified 11 months ago

Unify interface strings

Reported by: zorglub Assigned to:
Priority: high Milestone: 1.0.x feature freeze
Component: Interfaces Version:
Severity: normal Keywords:
Cc: Platform(s): all
Difficulty: easy Work status: Not started

Description (Last modified by zorglub)

Take all strings from WX, Qt and OS X, pda and BeOS.

For those who are common, take the best of the three, improve if needed, put a define in include/ and replace by defines.

Rationale:

  • Improve consistency between interfaces
  • Much less work for translators
  • Easier to have all strings for reviews

Change History

07/29/06 18:11:02 changed by zorglub

  • description changed.

And while you're at it, also take from other interfaces (pda, beos)

08/26/06 18:51:57 changed by zorglub

(In [16352]) * Allow service discoveries to state whether they prefer being displayed as tree * Start putting together all interface strings (Refs:#703)

10/22/07 01:52:40 changed by jb

  • milestone changed from 0.9.0-test1 to 0.9.1-features.