* Allow service discoveries to state whether they prefer being displayed as tree * Start putting together all interface strings (Refs:#703)