include/vlc_intf_strings.h
@@ -1,0 +1,42 @@
+/*****************************************************************************
+ * vlc_intf_strings.h : Strings for main interfaces
+ *****************************************************************************
+ * Copyright (C) 2003 the VideoLAN team
+ * $Id: vlc_config_cat.h 16001 2006-07-09 15:01:13Z dionoea $
+ *
+ * Authors: Clément Stenac <zorglub@videolan.org>
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston MA 02110-1301, USA.
+ *****************************************************************************/
+
+#ifndef _VLC_ISTRINGS_H
+#define _VLC_ISTRINGS_H 1
+
+/*************** Open dialogs **************/
+
+#define I_POP_SEL_FILES N_("Select one or more files to open")
+
+/******************* Menus *****************/
+
+/* Playlist popup */
+#define I_POP_PLAY N_("Play")
+#define I_POP_PREPARSE N_("Fetch information")
+#define I_POP_DEL N_("Delete")
+#define I_POP_INFO N_("Information")
+#define I_POP_SORT N_("Sort")
+#define I_POP_ADD N_("Add node")
+
+
+#endif
